--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -28,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@nestjs/terminus": "^10.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express-session": "^1.17.6",
     "@types/passport": "^1.0.12",
